--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>For Hiba ❤️</title>
+<title>For Heba ❤️</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -115,7 +115,7 @@ canvas{
 
     <!-- Valentine Screen -->
     <div id="valentineScreen" class="hidden">
-        <h1>هبة… Will you be my Valentine? ❤️</h1>
+        <h1>heba… Will you be my Valentine? ❤️</h1>
         <div id="buttons">
             <button class="yes" onclick="sayYes()">YES</button>
             <button class="no" id="noBtn" onclick="sayNo()">NO 💔</button>
@@ -148,7 +148,7 @@ function showValentine(){
 function sayYes(){
     result.innerHTML = `
     <div class="message">
-    By clicking YES you agree to:<br><br>
+    By clicking YES, you agree to begin this journey together:<br><br>
     - Protecting you like a king guards his queen<br>
     - Standing by you through every win and every challenge<br>
     - Late night drives, real talks, and building our future together<br><br>
